--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -18,4 +18,4 @@ ez_publish_legacy:
 
 parameters:
     ezpublish.api.storage_engine.default: legacy
-    ezpublish.api.storage_engine.legacy.dsn: mysql://root:root@localhost/ezdemo
+    ezpublish.api.storage_engine.legacy.dsn: mysql://root:root@localhost/madebymyxt_site
